ExprParser.cpp

// Generated from Expr.g4 by ANTLR 4.12.0


#include "ExprVisitor.h"

#include "ExprParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ExprParserStaticData final {
  ExprParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ExprParserStaticData(const ExprParserStaticData&) = delete;
  ExprParserStaticData(ExprParserStaticData&&) = delete;
  ExprParserStaticData& operator=(const ExprParserStaticData&) = delete;
  ExprParserStaticData& operator=(ExprParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag exprParserOnceFlag;
ExprParserStaticData *exprParserStaticData = nullptr;

void exprParserInitialize() {
  assert(exprParserStaticData == nullptr);
  auto staticData = std::make_unique<ExprParserStaticData>(
    std::vector<std::string>{
      "prog", "comment", "programDeclaration", "declaration", "constDeclaration", 
      "constAssignmentList", "constExpression", "varDeclaration", "varDeclarationList", 
      "varIdentifierList", "typeDefDeclaration", "typeDefList", "typeDefElement", 
      "typeIdentifier", "typeSpecification", "simpleType", "enumeratedType", 
      "subrange", "functionDeclaration", "paramDeclaration", "paramIdentifierList", 
      "statement", "multiDimensionalArrayIndexing", "assignment", "writeln", 
      "writelnArg", "writelnExpression", "forStatement", "compoundStatement", 
      "ifStatement", "statement_or_comment", "statement_without_semicolon", 
      "assignment_without_semicolon", "ldxStatement", "ldchStatement", "variable", 
      "functionCall", "arrayIndexing", "expression", "simpleExpression", 
      "term", "factor", "number", "characterConstant", "stringConstant"
    },
    std::vector<std::string>{
      "", "'.'", "", "':'", "'\"'", "'\\u003F'", "'!'", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "'''", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "'..'", "", "", "'+'", "'-'", "'/'", 
      "'*'", "':='", "'='", "'<>'", "'<='", "'>='", "'<'", "'>'", "'+='", 
      "'-='", "'*='", "'/='", "'^'", "';'", "','", "'('", "')'", "'['", 
      "']'", "'{'", "'}'", "'(*'", "'*)'"
    },
    std::vector<std::string>{
      "", "", "COMMENT", "COLON", "QUOTEMARK", "QMARK", "EXMARK", "NEWLINE", 
      "WS", "AND", "ARRAY", "ASM", "BEGIN", "BREAK", "CASE", "CONST", "CONSTRUCTOR", 
      "CONTINUE", "DESTRUCTOR", "DIV", "DO", "DOWNTO", "ELSE", "END", "FALSE", 
      "FILE", "FOR", "FUNCTION", "GOTO", "IF", "IMPLEMENTATION", "IN", "INLINE", 
      "INTERFACE", "LABEL", "MOD", "NIL", "NOT", "OBJECT", "OF", "ON", "OPERATOR", 
      "OR", "PACKED", "PROCEDURE", "PROGRAM", "RECORD", "REPEAT", "SET", 
      "SHL", "SHR", "QUOTE", "CHARACTER", "STRING", "THEN", "TO", "TRUE", 
      "TYPE", "UNIT", "UNTIL", "USES", "VAR", "WHILE", "WRITELN", "WITH", 
      "XOR", "LDX", "LDCH", "INTEGER", "RANGE", "REAL", "IDENTIFIER", "PLUSOP", 
      "MINUSOP", "DIVOP", "MULTOP", "ASSIGN", "EQUAL", "NE", "LTEQ", "GTEQ", 
      "LT", "GT", "PLUSEQUAL", "MINUSEQUAL", "MULTEQUAL", "DIVEQUAL", "CARAT", 
      "SEMICOLON", "COMMA", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
      "LBRACE", "RBRACE", "LCOMMENT", "RCOMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  exprParserStaticData = staticData.release();
}

}

ExprParser::ExprParser(TokenStream *input) : ExprParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ExprParser::ExprParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ExprParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *exprParserStaticData->atn, exprParserStaticData->decisionToDFA, exprParserStaticData->sharedContextCache, options);
}

ExprParser::~ExprParser() {
  delete _interpreter;
}

const atn::ATN& ExprParser::getATN() const {
  return *exprParserStaticData->atn;
}

std::string ExprParser::getGrammarFileName() const {
  return "Expr.g4";
}

const std::vector<std::string>& ExprParser::getRuleNames() const {
  return exprParserStaticData->ruleNames;
}

const dfa::Vocabulary& ExprParser::getVocabulary() const {
  return exprParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ExprParser::getSerializedATN() const {
  return exprParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

ExprParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::ProgContext::BEGIN() {
  return getToken(ExprParser::BEGIN, 0);
}

tree::TerminalNode* ExprParser::ProgContext::END() {
  return getToken(ExprParser::END, 0);
}

tree::TerminalNode* ExprParser::ProgContext::EOF() {
  return getToken(ExprParser::EOF, 0);
}

std::vector<ExprParser::DeclarationContext *> ExprParser::ProgContext::declaration() {
  return getRuleContexts<ExprParser::DeclarationContext>();
}

ExprParser::DeclarationContext* ExprParser::ProgContext::declaration(size_t i) {
  return getRuleContext<ExprParser::DeclarationContext>(i);
}

std::vector<ExprParser::ProgramDeclarationContext *> ExprParser::ProgContext::programDeclaration() {
  return getRuleContexts<ExprParser::ProgramDeclarationContext>();
}

ExprParser::ProgramDeclarationContext* ExprParser::ProgContext::programDeclaration(size_t i) {
  return getRuleContext<ExprParser::ProgramDeclarationContext>(i);
}

std::vector<ExprParser::CommentContext *> ExprParser::ProgContext::comment() {
  return getRuleContexts<ExprParser::CommentContext>();
}

ExprParser::CommentContext* ExprParser::ProgContext::comment(size_t i) {
  return getRuleContext<ExprParser::CommentContext>(i);
}

std::vector<ExprParser::StatementContext *> ExprParser::ProgContext::statement() {
  return getRuleContexts<ExprParser::StatementContext>();
}

ExprParser::StatementContext* ExprParser::ProgContext::statement(size_t i) {
  return getRuleContext<ExprParser::StatementContext>(i);
}


size_t ExprParser::ProgContext::getRuleIndex() const {
  return ExprParser::RuleProg;
}


std::any ExprParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ProgContext* ExprParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, ExprParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2449993381795889156) != 0)) {
      setState(93);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ExprParser::CONST:
        case ExprParser::FUNCTION:
        case ExprParser::TYPE:
        case ExprParser::VAR: {
          setState(90);
          declaration();
          break;
        }

        case ExprParser::PROGRAM: {
          setState(91);
          programDeclaration();
          break;
        }

        case ExprParser::COMMENT: {
          setState(92);
          comment();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(97);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(98);
    match(ExprParser::BEGIN);
    setState(103);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & -9223372036250791932) != 0) || ((((_la - 66) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 66)) & 35) != 0)) {
      setState(101);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
      case 1: {
        setState(99);
        statement();
        break;
      }

      case 2: {
        setState(100);
        comment();
        break;
      }

      default:
        break;
      }
      setState(105);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(106);
    match(ExprParser::END);
    setState(108);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::COMMENT) {
      setState(107);
      comment();
    }
    setState(110);
    match(ExprParser::T__0);
    setState(112);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::COMMENT) {
      setState(111);
      comment();
    }
    setState(114);
    match(ExprParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

ExprParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::CommentContext::COMMENT() {
  return getToken(ExprParser::COMMENT, 0);
}


size_t ExprParser::CommentContext::getRuleIndex() const {
  return ExprParser::RuleComment;
}


std::any ExprParser::CommentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitComment(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::CommentContext* ExprParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 2, ExprParser::RuleComment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    match(ExprParser::COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramDeclarationContext ------------------------------------------------------------------

ExprParser::ProgramDeclarationContext::ProgramDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::ProgramDeclarationContext::PROGRAM() {
  return getToken(ExprParser::PROGRAM, 0);
}

std::vector<tree::TerminalNode *> ExprParser::ProgramDeclarationContext::IDENTIFIER() {
  return getTokens(ExprParser::IDENTIFIER);
}

tree::TerminalNode* ExprParser::ProgramDeclarationContext::IDENTIFIER(size_t i) {
  return getToken(ExprParser::IDENTIFIER, i);
}

tree::TerminalNode* ExprParser::ProgramDeclarationContext::SEMICOLON() {
  return getToken(ExprParser::SEMICOLON, 0);
}

tree::TerminalNode* ExprParser::ProgramDeclarationContext::LPAREN() {
  return getToken(ExprParser::LPAREN, 0);
}

tree::TerminalNode* ExprParser::ProgramDeclarationContext::RPAREN() {
  return getToken(ExprParser::RPAREN, 0);
}

std::vector<tree::TerminalNode *> ExprParser::ProgramDeclarationContext::COMMA() {
  return getTokens(ExprParser::COMMA);
}

tree::TerminalNode* ExprParser::ProgramDeclarationContext::COMMA(size_t i) {
  return getToken(ExprParser::COMMA, i);
}


size_t ExprParser::ProgramDeclarationContext::getRuleIndex() const {
  return ExprParser::RuleProgramDeclaration;
}


std::any ExprParser::ProgramDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitProgramDeclaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ProgramDeclarationContext* ExprParser::programDeclaration() {
  ProgramDeclarationContext *_localctx = _tracker.createInstance<ProgramDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, ExprParser::RuleProgramDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(ExprParser::PROGRAM);
    setState(119);
    match(ExprParser::IDENTIFIER);
    setState(132);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ExprParser::LPAREN) {
      setState(120);
      match(ExprParser::LPAREN);
      setState(129);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ExprParser::IDENTIFIER) {
        setState(121);
        match(ExprParser::IDENTIFIER);
        setState(126);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ExprParser::COMMA) {
          setState(122);
          match(ExprParser::COMMA);
          setState(123);
          match(ExprParser::IDENTIFIER);
          setState(128);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
      }
      setState(131);
      match(ExprParser::RPAREN);
    }
    setState(134);
    match(ExprParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

ExprParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExprParser::ConstDeclarationContext* ExprParser::DeclarationContext::constDeclaration() {
  return getRuleContext<ExprParser::ConstDeclarationContext>(0);
}

ExprParser::VarDeclarationContext* ExprParser::DeclarationContext::varDeclaration() {
  return getRuleContext<ExprParser::VarDeclarationContext>(0);
}

ExprParser::TypeDefDeclarationContext* ExprParser::DeclarationContext::typeDefDeclaration() {
  return getRuleContext<ExprParser::TypeDefDeclarationContext>(0);
}

ExprParser::FunctionDeclarationContext* ExprParser::DeclarationContext::functionDeclaration() {
  return getRuleContext<ExprParser::FunctionDeclarationContext>(0);
}


size_t ExprParser::DeclarationContext::getRuleIndex() const {
  return ExprParser::RuleDeclaration;
}


std::any ExprParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::DeclarationContext* ExprParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, ExprParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(140);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ExprParser::CONST: {
        enterOuterAlt(_localctx, 1);
        setState(136);
        constDeclaration();
        break;
      }

      case ExprParser::VAR: {
        enterOuterAlt(_localctx, 2);
        setState(137);
        varDeclaration();
        break;
      }

      case ExprParser::TYPE: {
        enterOuterAlt(_localctx, 3);
        setState(138);
        typeDefDeclaration();
        break;
      }

      case ExprParser::FUNCTION: {
        enterOuterAlt(_localctx, 4);
        setState(139);
        functionDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstDeclarationContext ------------------------------------------------------------------

ExprParser::ConstDeclarationContext::ConstDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExprParser::ConstDeclarationContext::CONST() {
  return getToken(ExprParser::CONST, 0);
}

ExprParser::ConstAssignmentListContext* ExprParser::ConstDeclarationContext::constAssignmentList() {
  return getRuleContext<ExprParser::ConstAssignmentListContext>(0);
}


size_t ExprParser::ConstDeclarationContext::getRuleIndex() const {
  return ExprParser::RuleConstDeclaration;
}


std::any ExprParser::ConstDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitConstDeclaration(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ConstDeclarationContext* ExprParser::constDeclaration() {
  ConstDeclarationContext *_localctx = _tracker.createInstance<ConstDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, ExprParser::RuleConstDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(142);
    match(ExprParser::CONST);
    setState(143);
    constAssignmentList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstAssignmentListContext ------------------------------------------------------------------

ExprParser::ConstAssignmentListContext::ConstAssignmentListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ExprParser::ConstAssignmentListContext::IDENTIFIER() {
  return getTokens(ExprParser::IDENTIFIER);
}

tree::TerminalNode* ExprParser::ConstAssignmentListContext::IDENTIFIER(size_t i) {
  return getToken(ExprParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> ExprParser::ConstAssignmentListContext::EQUAL() {
  return getTokens(ExprParser::EQUAL);
}

tree::TerminalNode* ExprParser::ConstAssignmentListContext::EQUAL(size_t i) {
  return getToken(ExprParser::EQUAL, i);
}

std::vector<tree::TerminalNode *> ExprParser::ConstAssignmentListContext::SEMICOLON() {
  return getTokens(ExprParser::SEMICOLON);
}

tree::TerminalNode* ExprParser::ConstAssignmentListContext::SEMICOLON(size_t i) {
  return getToken(ExprParser::SEMICOLON, i);
}

std::vector<ExprParser::ConstExpressionContext *> ExprParser::ConstAssignmentListContext::constExpression() {
  return getRuleContexts<ExprParser::ConstExpressionContext>();
}

ExprParser::ConstExpressionContext* ExprParser::ConstAssignmentListContext::constExpression(size_t i) {
  return getRuleContext<ExprParser::ConstExpressionContext>(i);
}

std::vector<ExprParser::StringConstantContext *> ExprParser::ConstAssignmentListContext::stringConstant() {
  return getRuleContexts<ExprParser::StringConstantContext>();
}

ExprParser::StringConstantContext* ExprParser::ConstAssignmentListContext::stringConstant(size_t i) {
  return getRuleContext<ExprParser::StringConstantContext>(i);
}

std::vector<ExprParser::CommentContext *> ExprParser::ConstAssignmentListContext::comment() {
  return getRuleContexts<ExprParser::CommentContext>();
}

ExprParser::CommentContext* ExprParser::ConstAssignmentListContext::comment(size_t i) {
  return getRuleContext<ExprParser::CommentContext>(i);
}


size_t ExprParser::ConstAssignmentListContext::getRuleIndex() const {
  return ExprParser::RuleConstAssignmentList;
}


std::any ExprParser::ConstAssignmentListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExprVisitor*>(visitor))
    return parserVisitor->visitConstAssignmentList(this);
  else
    return visitor->visitChildren(this);
}

ExprParser::ConstAssignmentListContext* ExprParser::constAssignmentList() {
  ConstAssignmentListContext *_localctx = _tracker.createInstance<ConstAssignmentListContext>(_ctx, getState());
  enterRule(_localctx, 10, ExprParser::RuleConstAssignmentList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(177);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 17, _ctx)) {
    case 1: {
      setState(146);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ExprParser::COMMENT) {
        setState(145);
        comment();
      }
      setState(148);
      match(ExprParser::IDENTIFIER);
      setState(149);
      match(ExprParser::EQUAL);
      setState(152);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
      case 1: {
        setState(150);
        constExpression();
        break;
      }

      case 2: {
        setState(151);
        stringConstant();
        break;
      }

      default:
        break;
      }
      setState(169);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(155);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == ExprParser::COMMENT) {
            setState(154);
            comment();
          }
          setState(157);
          match(ExprParser::SEMICOLON);
          setState(159);
          _errHandler->sync(this);

          _la = _input->LA(1);
          if (_la == ExprParser::COMMENT) {
            setState(158);
            comment();
          }
          setState(161);
          match(ExprParser::IDENTIFIER);
          setState(162);
          match(ExprParser::EQUAL);
          setState(165);
          _errHandler->sync(this);
          switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
          case 1: {
            setState(163);
            constExpression();
            break;
          }

          case 2: {
            setState(164);
            stringConstant();
            break;
          }

          default:
            break;
          } 
        }
        setState(171);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
      }
      setState(173);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == ExprParser::COMMENT) {
        setState(172);
        comment();
      }
      setState(175);
      match(ExprParser::SEMICOLON);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
